--- a/css/main.css
+++ b/css/main.css
@@ -96,17 +96,127 @@ textarea {
    ========================================================================== */
 
 
+   html {
+     box-sizing: border-box;
+   }
+   #, *:before, *:after {
+     box-sizing: border-box;
+   }
+   body {
+     font-family: serif;
+     line-height: 1.4;
+   }
+   img {
+     max-width: 100%;
+     display: block;
+   }
+
+   .page-header {
+     background-color: red;
+     color: purple;
+     position: relative;
+     padding: 1em;
+     position: fixed;
+     width: 100%;
+     top: 0;
+     left: 0;
+     z-index: 10;
+   }
+   .page-header h1 {
+     font-size: 1.5em;
+     text-transform: uppercase;
+     text-align: center;
+     margin: 0;
+     line-height: 1;
+
+   }
+   .page-header .nav-icon {
+     position: absolute;
+     left: 1em;
+     top: 50%;
+     transform: translateY(-50%);
+     cursor: pointer;
+   }
+
+   /* main content */
+   .main-content {
+     margin: 3em auto;
+     max-width: 960px;
+     padding: 1em;
+   }
 
 
+   .main-nav {
+     display: none;
+     background-color: purple;
+     font-size: 1.5em;
+     font-weight: bold;
+     position: relative;
+   }
+   .main-nav ul {
+     margin-top: 1.5em;
+     list-style-type: none;
+   }
+   .main-nav li {
+     margin: 1em 0;
+   }
+   .main-nav a {
+     color: red;
+     text-decoration: none;
+   }
+   .main-nav .close-icon {
+     font-style: normal;
+     position: absolute;
+     top: 0.9rem;
+     right: 1rem;
+     line-height: 1;
+     color: red;
+     cursor: pointer;
+   }
+   .main-nav li {
+     position: relative;
+   }
+   .main-nav li.is-active:before {
+     content: '';
+     display: block;
+     width: 0;
+     height: 0;
+     border: 0.5rem solid transparent;
+     border-left-color: red;
+     position: absolute;
+     left: -.75em;
+     top: 50%;
+     transform: translateY(-50%);
+   }
+   /* nav-open */
+   .nav-open {
+     overflow: hidden;
+   }
+   .nav-open .main-nav {
+     position: absolute;
+     top: 0;
+     left: 0;
+     display: block;
+     border: 1px solid red;
+     width: 50%;
+     min-height: 100%
+   }
 
-
-
-
-
-
-
-
-
+   .nav-open .page-content{
+     border: 1px solid blue;
+     transform: translateX(50%);
+   }
+   .nav-open .page-content:before {
+     content: '';
+     display: block;
+     height: 100%;
+     width: 100%;
+     background: hsla(1, 100%, 50%, .66);
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 20;
+   }
 
 
 
